--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -35,7 +35,7 @@
 		border2-bg:			#e7e7e7,
 
 		accent1: (
-			bg:				#5078a0,
+			bg:				#1f1815,
 			fg:				mix(#5078a0, #ffffff, 25%),
 			fg-bold:		#ffffff,
 			fg-light:		mix(#5078a0, #ffffff, 40%),
