--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -854,6 +854,7 @@
 		cursor: pointer;
 		display: inline-block;
 		font-weight: _font(weight-bold);
+		font-size: 1em;
 		height: 3.15em;
 		height: calc(2.75em + 6px);
 		line-height: 2.75em;
