--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -204,7 +204,6 @@
 
 	section {
 		min-height: 100%;
-		height: 100vh;
 
 		img {
 			width: 75%;
@@ -227,6 +226,7 @@
 
 			img {
 				width: 100%;
+				padding-top: 3em;
 			}
 
 		}
@@ -1018,17 +1018,20 @@
 
 	#main {
 		margin-left: $size-header-width;
-		max-width: 100%;
 		width: calc(100% - #{$size-header-width});
 
 		> section {
-			margin: 0 0 0 0;
-			padding: ($size-header-pad * 2) $size-header-pad $size-header-pad $size-header-pad;;
+			margin: 0;
+			padding: $size-header-pad $size-header-pad $size-header-pad $size-header-pad;
 
 			&:first-child {
 				border-top: 0;
 				margin-top: 0;
 				padding:  3em 1em 3em 0;
+			}
+
+			&#success {
+				padding: ($size-header-pad * 2) $size-header-pad $size-header-pad $size-header-pad;
 			}
 
 		}
